[gd_scene load_steps=12 format=2]

[ext_resource path="res://producto/scripts/Ritmo/NivelRitmicoInicio.gd" type="Script" id=1]
[ext_resource path="res://producto/assets/img/Ritmo/Botones.png" type="Texture" id=2]
[ext_resource path="res://producto/assets/img/Ritmo/Background.jpg" type="Texture" id=3]
[ext_resource path="res://producto/assets/img/Ritmo/VintageEsquina.png" type="Texture" id=4]
[ext_resource path="res://producto/assets/fonts/FontInicio.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://producto/assets/fonts/AmberTastePro-Bold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 55
font_data = SubResource( 7 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.145098, 0.145098, 0.145098, 1 )
position = Vector2( 640, 360 )
scale = Vector2( 0.249447, 0.210193 )
texture = ExtResource( 3 )

[node name="Dificultad" type="Label" parent="."]
margin_left = 360.0
margin_top = 120.0
margin_right = 921.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 8 )
text = "Seleccionar Dificultad"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detalle_Vintage1" type="TextureRect" parent="."]
anchor_right = 0.289
margin_left = -32.0
margin_top = 16.0
margin_right = 417.0
margin_bottom = 404.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detalle_Vintage2" type="TextureRect" parent="."]
anchor_right = 0.289
margin_left = 1264.0
margin_top = -32.0
margin_right = 1713.0
margin_bottom = 356.0
rect_rotation = 90.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detalle_Vintage3" type="TextureRect" parent="."]
anchor_right = 0.289
margin_left = 1312.0
margin_top = 704.0
margin_right = 1761.0
margin_bottom = 1092.0
rect_rotation = 180.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detalle_Vintage4" type="TextureRect" parent="."]
anchor_right = 0.289
margin_left = 16.0
margin_top = 752.0
margin_right = 465.0
margin_bottom = 1140.0
rect_rotation = -90.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cartel" type="TextureRect" parent="."]
margin_left = 341.0
margin_top = 208.0
margin_right = 2341.0
margin_bottom = 2208.0
rect_scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 2 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="Control" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 440.0
margin_top = -80.0
margin_right = 856.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonFacil" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_left = 112.0
margin_top = -9.0
margin_right = 288.0
margin_bottom = 48.0
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.101961, 0.12549, 0.168627, 1 )
custom_colors/font_color_hover = Color( 0.0509804, 0.0705882, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.12549, 0.168627, 1 )
action_mode = 0
text = "Facil"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonIntermedio" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_left = 78.0
margin_top = 117.0
margin_right = 330.0
margin_bottom = 174.0
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.101961, 0.12549, 0.168627, 1 )
custom_colors/font_color_hover = Color( 0.0509804, 0.0705882, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.12549, 0.168627, 1 )
action_mode = 0
text = "Intermedio"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonDificil" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_left = 96.0
margin_top = 245.0
margin_right = 304.0
margin_bottom = 309.0
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.101961, 0.12549, 0.168627, 1 )
custom_colors/font_color_hover = Color( 0.0509804, 0.0705882, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.12549, 0.168627, 1 )
action_mode = 0
text = "Dificil"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="CanvasLayer/VBoxContainer/BotonFacil" to="." method="_on_BotonFacil_button_up"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BotonFacil" to="." method="_on_BotonFacil_pressed"]
[connection signal="button_up" from="CanvasLayer/VBoxContainer/BotonIntermedio" to="." method="_on_BotonIntermedio_button_up"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BotonIntermedio" to="." method="_on_BotonIntermedio_pressed"]
[connection signal="button_up" from="CanvasLayer/VBoxContainer/BotonDificil" to="." method="_on_BotonDificil_button_up"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BotonDificil" to="." method="_on_BotonDificil_pressed"]
